--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
 <div class="container main-content-wrapper">
-  <h1 class="dashboard-title">Dashboard</h1>
+  <h1 class="view-title">Dashboard</h1>
   <app-orders-table></app-orders-table>
 </div>
