--- a/src/app/customer/customers-view/customers-view.component.html
+++ b/src/app/customer/customers-view/customers-view.component.html
@@ -1,3 +1,4 @@
-<p>
-  customers-view works!
-</p>
+<div class="container main-content-wrapper">
+  <h1 class="view-title">Customers</h1>
+  <app-customers-table></app-customers-table>
+</div>
