--- a/src/app/order/orders-view/orders-view.component.html
+++ b/src/app/order/orders-view/orders-view.component.html
@@ -1,3 +1,4 @@
-<p>
-  orders-view works!
-</p>
+<div class="container main-content-wrapper">
+  <h1 class="view-title">Orders</h1>
+  <app-orders-table></app-orders-table>
+</div>
