--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,4 +14,6 @@
   </mat-toolbar-row>
 </mat-toolbar>
 
-<router-outlet></router-outlet>
+<div class="container main-content-wrapper">
+  <router-outlet></router-outlet>
+</div>
