--- a/src/app/home/orders/components/orders-table/orders-table.component.html
+++ b/src/app/home/orders/components/orders-table/orders-table.component.html
@@ -2,7 +2,7 @@
 
 <div class="mat-elevation-z8 table-wrapper">
 
-  <mat-table #table [dataSource]="orders">
+  <mat-table #table [dataSource]="orders$ | async">
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
