--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,13 +2,13 @@
   <mat-toolbar-row>
     <div class="container toolbar">
       <div class="title">
-        <span class="title-text" routerLink="/">Basturma App</span>
+        <span class="title-text" routerLink="/">Бастурмен</span>
       </div>
 
       <div class="actions">
-        <button mat-button routerLink="/orders">Orders</button>
-        <button mat-button routerLink="/customers">Customers</button>
-        <button mat-button>Logout</button>
+        <button mat-button routerLink="/orders">Заказы</button>
+        <button mat-button routerLink="/customers">Заказчики</button>
+        <button mat-button>Выйти</button>
       </div>
     </div>
   </mat-toolbar-row>
