--- a/src/app/home/customers/components/add-customer-modal/add-customer-modal.component.html
+++ b/src/app/home/customers/components/add-customer-modal/add-customer-modal.component.html
@@ -1,3 +1,26 @@
-<p>
-  add-customer-modal works!
-</p>
+<div class="form-container">
+  <h2 mat-dialog-title class="modal-title">Новый заказчик</h2>
+
+  <mat-dialog-content >
+    <form [formGroup]="form" (submit)="onSubmit($event)">
+      <div class="form-content">
+
+        <mat-form-field>
+          <input type="text" matInput formControlName="name" placeholder="Имя">
+        </mat-form-field>
+
+        <mat-form-field>
+          <input matInput formControlName="dateStartedToWork" [matDatepicker]="dateStartedToWorkPicker" placeholder="Дата начала работы">
+          <mat-datepicker-toggle matSuffix [for]="dateStartedToWorkPicker"></mat-datepicker-toggle>
+          <mat-datepicker #dateStartedToWorkPicker></mat-datepicker>
+        </mat-form-field>
+
+        <div class="form-controls">
+          <button mat-button type="submit">Создать</button>
+          <button mat-button mat-dialog-close>Отмена</button>
+        </div>
+      </div>
+    </form>
+  </mat-dialog-content>
+
+</div>
