--- a/src/styles.css
+++ b/src/styles.css
@@ -88,3 +88,11 @@ h1 {
   text-align: center;
 }
 
+.modal-title {
+  text-align: center;
+}
+
+.column-right {
+  display: flex;
+  justify-content: flex-end;
+}
