--- a/src/app/home/orders/components/orders-table/orders-table.component.html
+++ b/src/app/home/orders/components/orders-table/orders-table.component.html
@@ -10,31 +10,41 @@
     <!-- Customer Column -->
     <ng-container matColumnDef="customer">
       <mat-header-cell *matHeaderCellDef class="custom-header-cell">Заказчик</mat-header-cell>
-      <mat-cell *matCellDef="let element" class="custom-cell">{{element.customer}}</mat-cell>
+      <mat-cell *matCellDef="let order" class="custom-cell">{{order.customer}}</mat-cell>
     </ng-container>
 
     <!-- Date Delivered Column -->
     <ng-container matColumnDef="dateDelivered">
       <mat-header-cell *matHeaderCellDef class="custom-header-cell">Дата доставки</mat-header-cell>
-      <mat-cell *matCellDef="let element" class="custom-cell">{{element.dateDelivered.toDateString()}}</mat-cell>
+      <mat-cell *matCellDef="let order" class="custom-cell">{{order.dateDelivered.toDateString()}}</mat-cell>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="weight">
       <mat-header-cell *matHeaderCellDef class="custom-header-cell">Вес</mat-header-cell>
-      <mat-cell *matCellDef="let element"  class="custom-cell">{{element.weight}} Kg</mat-cell>
+      <mat-cell *matCellDef="let order"  class="custom-cell">{{order.weight}} Kg</mat-cell>
     </ng-container>
 
     <!-- Price Per Kilo Column -->
     <ng-container matColumnDef="pricePerKilo">
       <mat-header-cell *matHeaderCellDef class="custom-header-cell">Цена за кг</mat-header-cell>
-      <mat-cell *matCellDef="let element" class="custom-cell">{{element.pricePerKilo}} ₴</mat-cell>
+      <mat-cell *matCellDef="let order" class="custom-cell">{{order.pricePerKilo}} ₴</mat-cell>
     </ng-container>
 
     <!-- Sum Column -->
     <ng-container matColumnDef="sum">
       <mat-header-cell *matHeaderCellDef class="custom-header-cell">Сумма</mat-header-cell>
-      <mat-cell *matCellDef="let element" class="custom-cell">{{element.sum}} ₴</mat-cell>
+      <mat-cell *matCellDef="let order" class="custom-cell">{{order.sum}} ₴</mat-cell>
+    </ng-container>
+
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef class="custom-header-cell column-right">Действия</mat-header-cell>
+      <mat-cell  *matCellDef="let order" class="custom-cell column-right">
+        <button mat-mini-fab color="warn" (click)="deleteOrder(order.id)">
+          <mat-icon>delete_forever</mat-icon>
+        </button>
+      </mat-cell>
     </ng-container>
 
   </mat-table>
